--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="동물애호가 테스트">
   <meta property="og:description" content="나는 동물을 얼마나 사랑하는 사람일까?">
-  <meta property="og:image" content="img/og-logo.jpg">
-  <meta property="og:url" content="https://dev-dain.github.io/10-things-test/">
+  <meta property="og:image" content="img/og-logo.png">
+  <meta property="og:url" content="https://animal-lover-test.netlify.app/">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -61,7 +61,7 @@
       <p class="w-line">
         <span id="p-tit">이 테스트로 당신은...</span><br>
         당신이 동물을 얼마나 사랑하는지 알 수 있습니다.<br>
-        반려동물이 우리 삶속에 뿌리깊게 자리잡고 있는 21세기에
+        반려동물이 우리 삶 속에 뿌리깊게 자리잡고 있는 21세기에
         반려동물에 대한 나의 가치관과 생각들을 알아 갈 수 있는 기회입니다.
         테스트 결과로 당신이 반려동물을 얼마나 사랑하는지 알아보세요!
       </p>
@@ -134,9 +134,7 @@
       <hr>
       <div class="caution">
         <p>
-          이 테스트는 정확한 근거에 의한 동물애호가 테스트가 아닙니다. 재미로만 봐주시길 부탁드리겠습니다!
-
-          사진은 그냥 제가찍은 고양이 사진입니다 ㅎ
+          이 테스트는 정확한 근거에 의한 동물애호가 테스트가 아닙니다. 재미로만 봐주시길 부탁 드리겠습니다!
         </p>
       </div>
     </section>
