--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <span id="p-tit">이 테스트로 당신은...</span><br>
         당신이 동물을 얼마나 사랑하는지 알 수 있습니다.<br>
         반려동물이 우리 삶 속에 뿌리깊게 자리잡고 있는 21세기에
-        반려동물에 대한 나의 가치관과 생각들을 알아 갈 수 있는 기회입니다.
+        반려동물에 대한 나의 가치관과 생각들을 알아갈 수 있는 기회입니다.
         테스트 결과로 당신이 반려동물을 얼마나 사랑하는지 알아보세요!
       </p>
       <hr class="w-line">
@@ -125,8 +125,8 @@
       <div class="caution">
         <p>
           동물에 대한 윤리와 생각은 사람마다 달라 어렵습니다.
-          결과가 조금 맞지 않더라도 이런 면이 있음을 알고 동물들을 더 사랑해보세요.
-          당신은 동물을 사랑하는 동물애호가가 되있을겁니다!<br><br>
+          결과가 조금 맞지 않더라도 이러한 면이 있음을 알고 동물들을 더 사랑해보세요.
+          당신은 동물을 사랑하는 동물애호가가 되어있을 겁니다!<br><br>
           테스트가 재밌었다면
           <span class="go-share highlight" onclick=javascript:goShare()>공유하기</span>로 개발자를 도와주세요!
         </p>
@@ -134,7 +134,7 @@
       <hr>
       <div class="caution">
         <p>
-          이 테스트는 정확한 근거에 의한 동물애호가 테스트가 아닙니다. 재미로만 봐주시길 부탁 드리겠습니다!
+          이 테스트는 정확한 근거에 의한 동물애호가 테스트가 아닙니다. 재미로만 봐주시길 부탁드리겠습니다!
         </p>
       </div>
     </section>
