--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 
+  <script data-ad-client="ca-pub-9064931316680495" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
   <meta name="author" content="TaeKang Kim">
 
   <meta name="keywords" content="동물애호가 테스트, 내 동물애호지수를 알아보는 10가지 질문, 10-things-test, 3분이미지테스트, 이미지테스트, mbti, mbti 테스트, 고양이, 강아지">
